--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -5,58 +5,43 @@
     android:orientation="vertical"
     android:padding="16dp">
 
-
-
-
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textViewView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-black"
         android:gravity="center"
-        android:paddingBottom="20dp"
-        android:text="- - - -Y2S1 MODULES- - - -"
-        android:textSize="30dp" />
-
-    <TextView
-        android:id="@+id/textViewModule1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:paddingBottom="10dp"
-        android:text="@string/c218"
-        android:textSize="19dp" />
-
+        android:text="- - - - - - - - - - - - - - - - - -"
+        android:textSize="30dp"
+        />
     <TextView
-        android:id="@+id/textViewModule2"
+        android:id="@+id/AcademicYear"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="19dp"
-        android:paddingBottom="10dp"
-        android:text="@string/c346" />
+        android:text="@string/academic_year"
+        android:textSize="19dp"/>
 
     <TextView
-        android:id="@+id/textViewModule3"
+        android:id="@+id/Semester"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="19dp"
-        android:paddingBottom="10dp"
-        android:text="@string/c203" />
+        android:text="@string/semester"
+        android:textSize="19dp"/>
 
     <TextView
-        android:id="@+id/textViewModule4"
+        android:id="@+id/TotalModularCredits"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingBottom="10dp"
-        android:text="@string/C105"
-        android:textSize="19dp" />
+        android:text="@string/total_modular_credits"
+        android:textSize="19dp"/>
 
     <TextView
-        android:id="@+id/textViewModule5"
+        android:id="@+id/Modules"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingBottom="20dp"
-        android:text="@string/c206"
-        android:textSize="19dp" />
+        android:text="@string/modules"
+        android:textSize="19dp"/>
 
     <TextView
         android:id="@+id/textViewView"
@@ -64,14 +49,8 @@
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-black"
         android:gravity="center"
-        android:paddingBottom="20dp"
+        android:paddingTop="10dp"
         android:text="- - - - - - - - - - - - - - - - - -"
         android:textSize="30dp" />
-
-    <Button
-        android:id="@+id/buttonSummary"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Summary" />
 
 </LinearLayout>
